--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <img src="<%= blog.image %>">
         <span><%= blog.created.toDateString() %></span>
         <p><%= blog.body.substring(0, 100) %>...</p>
-        <a href="blogs/<%= blog._id%>">Read More</a>
+        <a href="/blogs/<%= blog._id%>">Read More</a>
     </div>
 <% }) %>
 <% include ./partials/footer%>
