Style blogs page Add back button on edit page

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -16,6 +16,7 @@
             <form id="delete" method="POST" action="/blogs/<%=blog._id%>?_method=DELETE">
                 <button class="ui red reversed button">Delete</button>
             </form>
+            <a class="ui teal reversed button" href="/blogs/<%=blog._id%>/edit/back">Back</a>
         </div>
 </div>
 
