--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header%>
 
 <div class="ui main text container">
-    <div class="ui huge header">RESTful Blog App</div>
+    <div id="index-header" class="ui huge header">Sara's Blog</div>
     <div class="ui top attached segment">
         <div class="ui divided items">
             <% blogs.forEach(function ( blog ) { %>
@@ -29,5 +29,3 @@
         </div>
     </div>
 </div>
-
-<% include ./partials/footer%>
