--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header%>
 
-<div class="ui main text container segment">
+<div id="new-post-container" class="ui main text container segment">
     <div class="ui huge header">New Blog</div>
     <form class="ui form" action="/blogs" method="post">
 
