Style changes on buttons

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -18,7 +18,7 @@
             <label>Blog Content</label>
             <textarea name="blog[body]"><%= blog.body %></textarea>
         </div>
-        <input class="ui violet inverted button" type="submit">
+        <input class="ui grey inverted button" type="submit">
     </form>
 </div>
 
