--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,7 +18,7 @@
             <label>Blog Content</label>
             <textarea name="blog[body]"></textarea>
         </div>
-        <input class="ui violet inverted button" type="submit">
+        <input class="ui basic grey button" type="submit">
     </form>
 </div>
 
