--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,6 @@
                <div class="header item"><i class="bug icon"></i> Blog Site</div>
                <a href="/" class="item">Home</a>
                <a href="/blogs/new" class="item">New Post</a>
+               <a href="/blogs/register" class="item float right">Login</a>
            </div>
        </div>
