Set up Login, Logout, and Register pages and routes

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,7 +2,7 @@
 
 <div id="new-post-container" class="ui main text container segment">
     <div class="ui huge header">New Blog</div>
-    <form class="ui form" action="/blogs" method="post">
+    <form class="ui form" action="/blogs/secret/new" method="post">
 
         <div class="field">
             <label>Title</label>
