--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,3 +1,8 @@
-<% include ./partials/header%>
-<img src="https://i0.wp.com/doodlewash.com/wp-content/uploads/2018/06/11June2018-1.jpg?fit=1024%2C733&ssl=1">
+<% include ./partials/header-secret %>
+
+<<div class="ui three column relaxed divided grid">
+    <img src="https://i0.wp.com/doodlewash.com/wp-content/uploads/2018/06/11June2018-1.jpg?fit=1024%2C733&ssl=1">
+</div>
+
+
 <% include ./partials/footer%>
