--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,20 @@
-<h1>login</h1>
+<% include ./partials/header%>
 
-<form action="/blogs/login" method="post">
-    <input type="text" name="username" placeholder="username">
-    <input type="text" name="password" placeholder="password">
-    <button>Submit</button>
-</form>
+<div id="new-post-container" class="ui main text container segment">
+    <div class="ui huge header">Login</div>
+    <form class="ui form" action="/blogs/login" method="post">
+
+        <div class="field">
+            <label>Username</label>
+            <input name="username" type="text" placeholder="Username" >
+        </div>
+
+        <div class="field">
+            <label>Password</label>
+            <input name="password" type="password" placeholder="Password" >
+        </div>
+        <input class="ui basic grey button" type="submit">
+    </form>
+</div>
+
+<% include ./partials/footer%>
