Add style to secret page

--- a/views/partials/header-secret.ejs
+++ b/views/partials/header-secret.ejs
@@ -6,12 +6,14 @@
     <link  rel="stylesheet" type="text/css" href="/stylesheets/app.css">
 </head>
 <body>
-<<div class="ui three column relaxed divided grid">
+<div class="ui three column relaxed divided grid">
     <div class="ui fixed inverted menu yellow">
         <div class="ui container">
-            <div class="header item"><i class="bug icon"></i> Blog Site</div>
+            <div class="header item">
+                <a href="/blogs"/>
+                <i class="bug icon"></i>Blog Site
+            </div>
             <a href="/" class="item">Home</a>
-            <a href="/blogs/new" class="item">New Post</a>
             <div class="right menu">
                 <a href="/blogs/login" class="item">Login</a>
                 <a href="/blogs/secret/new" class="item">New Post</a>
