--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
         <link  rel="stylesheet" type="text/css" href="/stylesheets/app.css">
      </head>
     <body>
-    <<div class="ui three column relaxed divided grid">
+    <div class="ui three column relaxed divided grid">
        <div class="ui fixed inverted menu yellow">
            <div class="ui container">
                <div class="header item">
