--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,6 +1,7 @@
 <% include ./partials/header-secret %>
 
-<<div class="ui three column relaxed divided grid">
+<div class="ui three column relaxed divided grid">
+    <h1 style="margin-top: 5rem; margin-left: 3rem">Secret Page</h1>
     <img src="https://i0.wp.com/doodlewash.com/wp-content/uploads/2018/06/11June2018-1.jpg?fit=1024%2C733&ssl=1">
 </div>
 
